--- a/dataset prepare.ipynb
+++ b/dataset prepare.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
@@ -17,10 +17,10 @@
    "outputs": [],
    "source": [
     "# For local dataset\n",
-    "test_data=np.load('Assignment1-Dataset/test_data.npy')\n",
-    "test_label=np.load('Assignment1-Dataset/test_label.npy')\n",
-    "train_data=np.load('Assignment1-Dataset/train_data.npy')\n",
-    "train_label=np.load('Assignment1-Dataset/train_label.npy')"
+    "test_data = np.load('Assignment1-Dataset/test_data.npy')\n",
+    "test_label = np.load('Assignment1-Dataset/test_label.npy')\n",
+    "train_data = np.load('Assignment1-Dataset/train_data.npy')\n",
+    "train_label = np.load('Assignment1-Dataset/train_label.npy')\n"
    ]
   },
   {
@@ -29,19 +29,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Transforming label from number to one-hot\n",
-    "new_test_label=np.zeros([len(test_label),10])\n",
-    "i=0\n",
+    "# Transforming label from number to one-hot\n",
+    "new_test_label = np.zeros([len(test_label), 10])\n",
+    "i = 0\n",
     "for label in test_label:\n",
-    "    new_test_label[i,label]=1\n",
-    "    i=i+1\n",
-    "test_label=new_test_label\n",
-    "new_train_label=np.zeros([len(train_label),10])\n",
-    "i=0\n",
+    "    new_test_label[i, label] = 1\n",
+    "    i = i+1\n",
+    "test_label = new_test_label\n",
+    "new_train_label = np.zeros([len(train_label), 10])\n",
+    "i = 0\n",
     "for label in train_label:\n",
-    "    new_train_label[i,label]=1\n",
-    "    i=i+1\n",
-    "train_label=new_train_label"
+    "    new_train_label[i, label] = 1\n",
+    "    i = i+1\n",
+    "train_label = new_train_label\n"
    ]
   },
   {
@@ -50,15 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#separating test dataset to test and validation\n",
+    "# separating test dataset to test and validation\n",
     "idx = np.arange(test_data.shape[0])\n",
     "np.random.shuffle(idx)\n",
-    "new_test_data=test_data[idx]\n",
-    "new_test_label=test_label[idx]\n",
-    "test_data=new_test_data[:5000]\n",
-    "test_label=new_test_label[:5000]\n",
-    "valid_data=new_test_data[5000:]\n",
-    "valid_label=new_test_label[5000:]"
+    "new_test_data = test_data[idx]\n",
+    "new_test_label = test_label[idx]\n",
+    "test_data = new_test_data[:5000]\n",
+    "test_label = new_test_label[:5000]\n",
+    "valid_data = new_test_data[5000:]\n",
+    "valid_label = new_test_label[5000:]\n"
    ]
   },
   {
@@ -67,9 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#making sure there is a folder\n",
+    "# making sure there is a folder\n",
     "if not os.path.exists('Train-Test-Val'):\n",
-    "    os.makedirs('Train-Test-Val')"
+    "    os.makedirs('Train-Test-Val')\n"
    ]
   },
   {
@@ -78,13 +78,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#saving them\n",
-    "np.save('Train-Test-Val\\\\test_data',test_data)\n",
-    "np.save('Train-Test-Val\\\\test_label',test_label)\n",
-    "np.save('Train-Test-Val\\\\train_data',train_data)\n",
-    "np.save('Train-Test-Val\\\\train_label',train_label)\n",
-    "np.save('Train-Test-Val\\\\valid_data',valid_data)\n",
-    "np.save('Train-Test-Val\\\\valid_label',valid_label)"
+    "# saving them\n",
+    "np.save('Train-Test-Val\\\\test_data', test_data)\n",
+    "np.save('Train-Test-Val\\\\test_label', test_label)\n",
+    "np.save('Train-Test-Val\\\\train_data', train_data)\n",
+    "np.save('Train-Test-Val\\\\train_label', train_label)\n",
+    "np.save('Train-Test-Val\\\\valid_data', valid_data)\n",
+    "np.save('Train-Test-Val\\\\valid_label', valid_label)\n"
    ]
   }
  ],
