--- a/Model.ipynb
+++ b/Model.ipynb
@@ -27,7 +27,20 @@
         "# train_data=np.load('Assignment1-Dataset\\\\train_data.npy')\n",
         "# train_label=np.load('Assignment1-Dataset\\\\train_label.npy')\n",
         "# valid_data=np.load('Assignment1-Dataset\\\\test_data.npy')\n",
-        "# valid_label=np.load('Assignment1-Dataset\\\\test_label.npy')\n"
+        "# valid_label=np.load('Assignment1-Dataset\\\\test_label.npy')\n",
+        "# Transforming label from number to one-hot\n",
+        "# new_test_label = np.zeros([len(valid_label), 10])\n",
+        "# i = 0\n",
+        "# for label in valid_label:\n",
+        "#     new_test_label[i, label] = 1\n",
+        "#     i = i+1\n",
+        "# valid_label = new_test_label\n",
+        "# new_train_label = np.zeros([len(train_label), 10])\n",
+        "# i = 0\n",
+        "# for label in train_label:\n",
+        "#     new_train_label[i, label] = 1\n",
+        "#     i = i+1\n",
+        "# train_label = new_train_label"
       ]
     },
     {
